[gd_scene load_steps=9 format=3 uid="uid://cmvl74pv2k7vc"]

[ext_resource type="Script" path="res://Scripts/slime_enemy.gd" id="1_awp7o"]
[ext_resource type="Texture2D" uid="uid://bysmhl5vh4bbt" path="res://Assets/brackeys_platformer_assets/sprites/slime_green.png" id="2_s1mk4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q08mp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vkao8"]
radius = 180.025

[sub_resource type="Animation" id="Animation_to7jr"]
resource_name = "idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [4, 5, 6]
}

[sub_resource type="Animation" id="Animation_mhxc1"]
resource_name = "walk"

[sub_resource type="Animation" id="Animation_kus4j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c25nr"]
_data = {
"RESET": SubResource("Animation_kus4j"),
"idle": SubResource("Animation_to7jr"),
"walk": SubResource("Animation_mhxc1")
}

[node name="slime-enemy" type="CharacterBody2D"]
script = ExtResource("1_awp7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_q08mp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -2)
texture = ExtResource("2_s1mk4")
hframes = 4
vframes = 3
frame = 5

[node name="vision" type="Area2D" parent="."]

[node name="detection_area" type="CollisionShape2D" parent="vision"]
shape = SubResource("CircleShape2D_vkao8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c25nr")
}

[connection signal="area_entered" from="vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="vision" to="." method="_on_vision_area_exited"]
